tests/parsing/smtlib/v2.7/errors/021_let_bad_body_2.smt2
(set-logic ALL)
(assert (let ((x 42)) as))
